fix bug of the previous version